# StackTics

./: .gitignore  README.md
backend/: README_backend.md  pyproject.toml
backend/app/: __init__.py  main.py  models.py  schemas.py
backend/app/api/: __init__.py  routes.py
backend/app/optimizer/: __init__.py  engine.py
backend/tests/: __init__.py  test_optimizer_smoke.py
docs/: API_CONTRACT.md  ARCHITECTURE.md  PHASES.md  README.md
frontend/: README_frontend.md  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts  types.ts  validation.ts
frontend/src/components/: BedConfigForm.tsx  BoxListEditor.tsx  Layout2DView.tsx  PackingSettingsForm.tsx  SummaryPanel.tsx
